# heat-fin-simulation-cpp

./: .gitignore  CMakeLists.txt  README.adoc  README.md  report.tex  simu.cfg
.github/workflows/: ci.yml
include/: config.hpp  constantFlux.hpp  heatFlux.hpp  instationary.hpp  mesh.hpp  solver.hpp  stationary.hpp  tridiag.hpp  vector.hpp
rapport/: main.tex
results/: mesh.vtk  stationary1D.csv
src/: config.cpp  constantFlux.cpp  heatFlux.cpp  instationary.cpp  main.cpp  mesh.cpp  solver.cpp  stationary.cpp  tridiag.cpp
test/: test_solver.cpp  test_stationary.cpp  test_tridiag.cpp  test_vector.cpp
